[Win] fast/dom/assign-to-window-status.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=173512

Reviewed by Alex Christensen.

We should not dump status callbacks when test is done.

* DumpRenderTree/win/UIDelegate.cpp:
(UIDelegate::setStatusText):


Canonical link: https://commits.webkit.org/190438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218494 268f45cc-cd09-0410-ab3c-d52691b4dbfc